# Kaleidoscope-host_keymap

./: CMakeLists.txt  Exception.h  KaleidoscopeKeycodeInfo.cpp  KaleidoscopeKeycodeInfo.h  KeymapInfo.cpp  KeymapInfo.h  LayoutProcessor.cpp  LayoutProcessor.h  ModifierState.cpp  ModifierState.h  README.md  Settings.cpp  Settings.h  extra_layouts.cpp  extra_layouts.h  hid_keyboard_keys.h  hid_to_key_event.h  host_keymap.cpp  kaleidoscope_keyboard_keys.h  static_maps.cpp  static_maps.h  xkbcommon_keysyms_mod.h  xkbcommon_keysyms_mod_only_defines.h  xkbcommon_keysyms_non_printable.h  xkbcommon_keysyms_non_unicode.h  xkbcommon_keysyms_printable.h  xkbcommon_keysyms_unicode.h
python/: parse_xkb_base_extra.py
